# graphql

./: MANIFEST.in  README.rst  pyproject.toml  setup.py
.github/data/: labels.yml
.github/workflows/: build.yml  check.yml  deploy.yml
docs/: conf.py  index.rst
docs/client/: errors.rst
docs/meta/: implementation.rst
docs/reference/: index.rst
docs/reference/graphql/: index.rst
docs/reference/graphql/client/: client.rst  errors.rst  index.rst
graphql/: __init__.py  __init__.pyi
graphql/client/: __init__.py  client.py  client.pyi  errors.py  errors.pyi  http.py
