[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pyright]
reportInvalidTypeVarUse = false
reportUnnecessaryTypeIgnoreComment = "warning"
enableExperimentalFeatures = true
pythonVersion = "3.8"
typeCheckingMode = "strict"

[tool.black]
line-length = 200
